Bug 141329 - template manager: refresh shows the wrong category
Summary: template manager: refresh shows the wrong category
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium minor
Assignee: VertD
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-29 20:34 UTC by VertD
Modified: 2021-07-27 04:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description VertD 2021-03-29 20:34:48 UTC
Description:
 

Steps to Reproduce:
1.Open Template Manager
2.Add Category "category"
3.select category Presentations
4.refresh

Actual Results:
refresh the wrong category

Expected Results:
It refresh the selected category.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Commit Notification 2021-03-30 09:33:28 UTC
Vert D committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f974664988d84a32196c152a3cf996e2b4909f70

tdf#141329 fix refresh shows the wrong category

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 BogdanB 2021-07-22 21:42:13 UTC
VertD, please mark this bug as resolved. I have verified and it is fixed in Version: 7.2.0.1.0+ / LibreOffice Community
Build ID: 5570795d54a00041a406243b777f0df5f6399b67
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-2, Time: 2021-07-15_19:14:35
Calc: threaded
Comment 3 BogdanB 2021-07-27 04:12:59 UTC
Verified with
7.2.0.1.0+ / LibreOffice Community
Build ID: 5570795d54a00041a406243b777f0df5f6399b67
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-2, Time: 2021-07-15_19:14:35
Calc: threaded