tdf#141329 fix refresh shows the wrong category

Change-Id: Iec36c7aa4cb54773a759260638f03b1b218faaa0